fixed filters not showing on mobile

--- a/client/src/views/catalog/CatalogView.css
+++ b/client/src/views/catalog/CatalogView.css
@@ -362,6 +362,7 @@
     max-height: 1000px;
     padding: 1.2rem 1rem 1.5rem;
     border-bottom: 1px solid rgba(112, 141, 129, 0.15);
+    margin-top: 5em;
   }
 
   .catalog-main-content {
